--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-md-5">
 
-                    <h1>Tenha sua própria loja em minutos</h1>
+                    <h1>Tenha sua própria loja em minutos.</h1>
 
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur, blanditiis
